--- a/expense-project/mysql/manifest.yaml
+++ b/expense-project/mysql/manifest.yaml
@@ -1,11 +1,12 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: expense
   name: mysql
-  tier: db
-  project: expense
-  
+  namespace: expense
+  labels:
+    name: mysql
+    tier: db
+    project: expense  
 spec:
   replicas: 1
   selector:
