--- a/expense-project/mysql/manifest.yaml
+++ b/expense-project/mysql/manifest.yaml
@@ -25,7 +25,7 @@ spec:
       - name: mysql-expense
         image: vamsidocker012/mysql:v1 
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: mysql-Service
