--- a/expense-project/mysql/manifest.yaml
+++ b/expense-project/mysql/manifest.yaml
@@ -54,6 +54,8 @@ spec:
         tier: db
         project: expense
     spec:
+      securityContext:
+        fsGroup: 999
       containers: 
       - name: mysql
         image: vamsidocker012/mysql:v1
@@ -65,7 +67,7 @@ spec:
       name: mysql
     spec:
       accessModes: [ "ReadWriteOnce"]
-      storageClassName: "expense-ebs"
+      storageClassName: expense-ebs
       resources: 
         requests:
           storage: 1Gi
